@@ -12,7 +12,7 @@
  *******************************************************************************/
 package net.sf.oval.constraint;
 
-import static net.sf.oval.Validator.getCollectionFactory;
+import static net.sf.oval.Validator.*;
 
 import java.util.Collection;
 import java.util.List;
@@ -56,6 +56,7 @@ public class MatchPatternCheck extends AbstractAnnotationCheck<MatchPattern>
 				final Pattern p = Pattern.compile(stringPatterns[i], flag);
 				patterns.add(p);
 			}
+			requireMessageVariablesRecreation();
 		}
 	}
 
